@@ -1,15 +1,10 @@
 package br.ufma.springextensao.controller;
 
-import br.ufma.extensao.servicos.InscricaoService;
 import br.ufma.springextensao.controller.dtos.InscricaoDTO;
-import br.ufma.springextensao.model.Discente;
-import br.ufma.springextensao.model.Inscricao;
-import br.ufma.springextensao.model.Oportunidade;
-import br.ufma.springextensao.model.Usuario;
+import br.ufma.springextensao.model.*;
+import br.ufma.springextensao.service.InscricaoService;
 import br.ufma.springextensao.service.UsuarioService;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
-import org.junit.jupiter.api.BeforeEach;
+import jakarta.servlet.http.HttpSession;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -18,966 +13,417 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
-import org.springframework.http.MediaType;
-import org.springframework.mock.web.MockHttpSession;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-/**
- * Testes unitários de InscricaoController.
- *
- * Estratégia: MockMvc standalone (sem contexto Spring).
- * O InscricaoService e o UsuarioService são mocks puros — nenhum banco é acessado.
- *
- * Testes marcados com "BUG CONHECIDO" ficam VERMELHOS até a correção correspondente
- * ser aplicada no código de produção.
+/*
+ * Mesmo padrão de CursoControllerTest/GrupoControllerTest: InscricaoService é
+ * mockado e a sessão é resolvida por Sessao.logado(session, usuarioService).
  */
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
 class InscricaoControllerTest {
 
-    // ═══════════════════════════════════════════════════════════════════════
-    // Dependências mockadas
-    // ═══════════════════════════════════════════════════════════════════════
+    @Mock
+    InscricaoService inscricaoService;
 
     @Mock
-    private InscricaoService inscricaoService;
+    UsuarioService usuarioService;
 
     @Mock
-    private UsuarioService usuarioService;
+    HttpSession session;
 
     @InjectMocks
-    private InscricaoController controller;
+    InscricaoController inscricaoController;
 
-    private MockMvc mockMvc;
-    private ObjectMapper mapper;
+    private int nextId = 1;
 
-    // ═══════════════════════════════════════════════════════════════════════
-    // Setup
-    // ═══════════════════════════════════════════════════════════════════════
-
-    @BeforeEach
-    void setUp() {
-        mockMvc = MockMvcBuilders.standaloneSetup(controller).build();
-        mapper  = new ObjectMapper().registerModule(new JavaTimeModule());
+    private Docente docente() {
+        Docente d = Docente.builder()
+                .nome("Carlos")
+                .email("carlos@ufma.br")
+                .senha("hash")
+                .ativo(true)
+                .cargos(new ArrayList<>())
+                .build();
+        d.setId(nextId++);
+        return d;
     }
 
-    // ═══════════════════════════════════════════════════════════════════════
-    // Helpers — construtores de entidades de teste
-    // ═══════════════════════════════════════════════════════════════════════
-
-    private Usuario umUsuario(Integer id) {
-        Usuario u = new Usuario();
-        u.setId(id);
-        return u;
+    private Discente discente() {
+        Discente d = Discente.builder()
+                .nome("Joana")
+                .email("joana@ufma.br")
+                .senha("hash")
+                .ativo(true)
+                .cargos(new ArrayList<>())
+                .build();
+        d.setId(nextId++);
+        return d;
     }
 
-    private Oportunidade umaOportunidade(Integer id) {
-        Oportunidade o = new Oportunidade();
-        o.setId(id);
-        return o;
-    }
-
-    private Inscricao umaInscricao(Integer id) {
+    private Inscricao inscricao(Integer id) {
         Inscricao i = new Inscricao();
         i.setId(id);
         return i;
     }
 
-    private Discente umDiscente(Integer id) {
-        Discente d = new Discente();
-        d.setId(id);
-        return d;
-    }
-
-    private InscricaoDTO umaInscricaoDTO(Integer oportunidadeId) {
+    private InscricaoDTO inscricaoDTO(Integer idOportunidade, Integer idDiscente, String motivacao) {
         InscricaoDTO dto = new InscricaoDTO();
-        // ajuste os setters conforme os campos reais de InscricaoDTO
-        dto.setOportunidadeId(oportunidadeId);
+        dto.setIdOportunidade(idOportunidade);
+        dto.setIdDiscente(idDiscente);
+        dto.setMotivacao(motivacao);
         return dto;
     }
 
-    /** Sessão com o atributo CORRETO de usuário logado. */
-    private MockHttpSession sessaoLogada(Integer usuarioId) {
-        MockHttpSession s = new MockHttpSession();
-        s.setAttribute("IdUsuarioLogado", usuarioId);
-        return s;
+    /** Simula um usuário autenticado na sessão. */
+    private void logarComo(Usuario usuario) {
+        when(session.getAttribute("IdUsuarioLogado")).thenReturn(usuario.getId());
+        when(usuarioService.buscarPorId(usuario.getId())).thenReturn(usuario);
     }
 
-    /** Sessão sem nenhum atributo (usuário não autenticado). */
-    private MockHttpSession sessaoVazia() {
-        return new MockHttpSession();
-    }
-
-    // ═══════════════════════════════════════════════════════════════════════
-    // POST /api/inscricao/inscrever
-    // ═══════════════════════════════════════════════════════════════════════
+    // inscrever (POST /api/inscricao/inscrever) -----------------------------
 
     @Nested
-    class InscreverTest {
+    class Inscrever {
 
         @Test
-        void caminhoFeliz_deveInscreverERetornar201() throws Exception {
-            InscricaoDTO dto      = umaInscricaoDTO(5);
-            Inscricao    salva    = umaInscricao(1);
+        void devePermitirInscricaoComDadosValidos() {
+            InscricaoDTO dto = inscricaoDTO(5, 1, "Interesse na área");
+            Inscricao esperada = inscricao(1);
+            when(inscricaoService.inscrever(dto)).thenReturn(esperada);
 
-            when(inscricaoService.inscrever(any(InscricaoDTO.class))).thenReturn(salva);
+            Inscricao resultado = inscricaoController.inscrever(dto);
 
-            mockMvc.perform(post("/api/inscricao/inscrever")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(dto)))
-                    .andExpect(status().isCreated());
-
-            verify(inscricaoService, times(1)).inscrever(any(InscricaoDTO.class));
+            assertThat(resultado).isEqualTo(esperada);
+            verify(inscricaoService, times(1)).inscrever(dto);
         }
 
         @Test
-        void deveRepassarDTOIntactoAoService() throws Exception {
-            InscricaoDTO dto   = umaInscricaoDTO(7);
-            Inscricao    salva = umaInscricao(2);
+        void devePropagarExcecaoQuandoOportunidadeNaoExiste() {
+            InscricaoDTO dto = inscricaoDTO(999, 1, "Interesse");
+            when(inscricaoService.inscrever(dto))
+                    .thenThrow(new IllegalArgumentException("Oportunidade não existente"));
 
-            when(inscricaoService.inscrever(any(InscricaoDTO.class))).thenReturn(salva);
-
-            mockMvc.perform(post("/api/inscricao/inscrever")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(dto)))
-                    .andExpect(status().isCreated());
-
-            // garante que o service foi chamado com um DTO (não null)
-            verify(inscricaoService).inscrever(any(InscricaoDTO.class));
+            assertThatThrownBy(() -> inscricaoController.inscrever(dto))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("Oportunidade não existente");
         }
 
         @Test
-        void semCorpo_deveRetornar400() throws Exception {
-            mockMvc.perform(post("/api/inscricao/inscrever")
-                            .contentType(MediaType.APPLICATION_JSON))
-                    .andExpect(status().isBadRequest());
+        void devePropagarExcecaoQuandoOportunidadeNaoEstaAberta() {
+            InscricaoDTO dto = inscricaoDTO(5, 1, "Interesse");
+            when(inscricaoService.inscrever(dto))
+                    .thenThrow(new IllegalStateException("Oportunidade não está aberta para inscrições."));
 
-            verifyNoInteractions(inscricaoService);
+            assertThatThrownBy(() -> inscricaoController.inscrever(dto))
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("não está aberta");
         }
     }
 
-    // ═══════════════════════════════════════════════════════════════════════
-    // PATCH /api/inscricao/aprovar/{id}
-    // ═══════════════════════════════════════════════════════════════════════
+    // aprovar (PATCH /api/inscricao/aprovar/{id}) ----------------------------
 
     @Nested
-    class AprovarTest {
+    class Aprovar {
 
-        // BUG CONHECIDO [InscricaoController.java, linha 32+34]:
-        // @PatchMapping("/aprovar/{id}") declara a variável de path como {id},
-        // mas o parâmetro do método usa @PathVariable Integer inscricaoId (sem @PathVariable("id")).
-        // Spring não consegue fazer o binding e lança IllegalArgumentException → 500.
-        // Fica VERMELHO até adicionar @PathVariable("id") ou renomear o path para {inscricaoId}.
         @Test
-        void caminhoFeliz_deveAprovarInscricaoERetornar200() throws Exception {
-            Usuario      solicitante  = umUsuario(10);
-            Oportunidade oportunidade = umaOportunidade(5);
-            Inscricao    aprovada     = umaInscricao(1);
+        void devePermitirAprovacaoQuandoDocenteEstaLogado() {
+            Docente solicitante = docente();
+            logarComo(solicitante);
+            Inscricao esperada = inscricao(1);
+            when(inscricaoService.aprovar(1, solicitante)).thenReturn(esperada);
 
-            when(usuarioService.buscarPorId(10)).thenReturn(solicitante);
-            when(inscricaoService.aprovar(eq(1), any(Oportunidade.class), eq(solicitante)))
-                    .thenReturn(aprovada);
+            Inscricao resultado = inscricaoController.aprovar(1, session);
 
-            mockMvc.perform(patch("/api/inscricao/aprovar/1")
-                            .session(sessaoLogada(10))
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(oportunidade)))
-                    .andExpect(status().isOk());
-
-            verify(inscricaoService).aprovar(eq(1), any(Oportunidade.class), eq(solicitante));
+            assertThat(resultado).isEqualTo(esperada);
+            verify(inscricaoService, times(1)).aprovar(1, solicitante);
         }
 
-        // BUG CONHECIDO [InscricaoController.java, linha 35]:
-        // O atributo de sessão lido é "IsUsuaeioLogado" (typo com "ae") em vez de
-        // "IdUsuarioLogado". Com a sessão correta configurada aqui, o controller
-        // não encontra o atributo, retorna null e lança SecurityException → 500.
-        // Fica VERMELHO até corrigir o nome do atributo no controller.
         @Test
-        void caminhoFeliz_sessaoCorreta_deveEncontrarUsuarioSemErroDeAtributo() throws Exception {
-            Usuario      solicitante  = umUsuario(10);
-            Oportunidade oportunidade = umaOportunidade(5);
-            Inscricao    aprovada     = umaInscricao(1);
+        void deveLancarExcecaoQuandoUsuarioNaoEstaLogado() {
+            when(session.getAttribute("IdUsuarioLogado")).thenReturn(7);
+            when(usuarioService.buscarPorId(7)).thenReturn(null);
 
-            // Sessão com o atributo no formato CORRETO
-            MockHttpSession sessao = sessaoLogada(10);
+            assertThatThrownBy(() -> inscricaoController.aprovar(1, session))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("Solicitante não foi encontrado.");
 
-            when(usuarioService.buscarPorId(10)).thenReturn(solicitante);
-            when(inscricaoService.aprovar(any(), any(), any())).thenReturn(aprovada);
-
-            // Espera 200 — vai falhar enquanto o controller ler "IsUsuaeioLogado"
-            mockMvc.perform(patch("/api/inscricao/aprovar/1")
-                            .session(sessao)
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(oportunidade)))
-                    .andExpect(status().isOk());
+            verify(inscricaoService, never()).aprovar(any(), any());
         }
 
-        // BUG CONHECIDO [InscricaoController.java, linha 37]:
-        // O controller lança SecurityException (unchecked), que o DispatcherServlet
-        // converte em HTTP 500. O comportamento correto para "não autenticado" é 403.
-        // Fica VERMELHO até mapear SecurityException para 403 em um @ExceptionHandler.
         @Test
-        void usuarioNaoLogado_deveRetornar403() throws Exception {
-            when(usuarioService.buscarPorId(any())).thenReturn(null);
+        void deveLancarExcecaoQuandoSessaoNaoTemAtributo() {
+            assertThatThrownBy(() -> inscricaoController.aprovar(1, session))
+                    .isInstanceOf(SecurityException.class)
+                    .hasMessageContaining("É preciso estar logado para chamar esse método.");
 
-            mockMvc.perform(patch("/api/inscricao/aprovar/1")
-                            .session(sessaoVazia())
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(umaOportunidade(1))))
-                    .andExpect(status().isForbidden()); // 403, não 500
+            verify(inscricaoService, never()).aprovar(any(), any());
+        }
 
-            verify(inscricaoService, never()).aprovar(any(), any(), any());
+        @Test
+        void devePropagarExcecaoQuandoInscricaoNaoExiste() {
+            Docente solicitante = docente();
+            logarComo(solicitante);
+            when(inscricaoService.aprovar(999, solicitante))
+                    .thenThrow(new IllegalArgumentException("Inscrição não existe"));
+
+            assertThatThrownBy(() -> inscricaoController.aprovar(999, session))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("Inscrição não existe");
+        }
+
+        @Test
+        void devePropagarExcecaoQuandoOportunidadeSemVagas() {
+            Docente solicitante = docente();
+            logarComo(solicitante);
+            when(inscricaoService.aprovar(1, solicitante))
+                    .thenThrow(new IllegalStateException("A oportunidade não possui vagas livres."));
+
+            assertThatThrownBy(() -> inscricaoController.aprovar(1, session))
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("vagas livres");
         }
     }
 
-    // ═══════════════════════════════════════════════════════════════════════
-    // PATCH /api/inscricao/rejeitar
-    // ═══════════════════════════════════════════════════════════════════════
+    // rejeitar (PATCH /api/inscricao/rejeitar/{id}) --------------------------
 
     @Nested
-    class RejeitarTest {
+    class Rejeitar {
 
-        // BUG CONHECIDO [InscricaoController.java, linha 42+44]:
-        // @PatchMapping("/rejeitar") não possui nenhuma variável de path,
-        // mas o método declara @PathVariable Integer inscricaoId.
-        // Spring lança MissingPathVariableException → 500.
-        // Fica VERMELHO até corrigir o mapping para "/rejeitar/{inscricaoId}".
         @Test
-        void caminhoFeliz_deveRejeitarERetornar200() throws Exception {
-            Usuario      solicitante  = umUsuario(10);
-            Oportunidade oportunidade = umaOportunidade(5);
-            Inscricao    rejeitada    = umaInscricao(1);
+        void devePermitirRejeicaoComJustificativa() {
+            Docente solicitante = docente();
+            logarComo(solicitante);
+            Inscricao esperada = inscricao(1);
+            when(inscricaoService.rejeitar(1, "Fora do prazo", solicitante)).thenReturn(esperada);
 
-            when(usuarioService.buscarPorId(10)).thenReturn(solicitante);
-            when(inscricaoService.rejeitarRemoverDiscente(
-                    eq(1), eq("motivo invalido"), any(Oportunidade.class), eq(solicitante)))
-                    .thenReturn(rejeitada);
+            Inscricao resultado = inscricaoController.rejeitar(1, "Fora do prazo", session);
 
-            mockMvc.perform(patch("/api/inscricao/rejeitar/1")   // path correto após correção
-                            .session(sessaoLogada(10))
-                            .param("justificativa", "motivo invalido")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(oportunidade)))
-                    .andExpect(status().isOk());
-
-            verify(inscricaoService).rejeitarRemoverDiscente(
-                    eq(1), eq("motivo invalido"), any(Oportunidade.class), eq(solicitante));
+            assertThat(resultado).isEqualTo(esperada);
+            verify(inscricaoService, times(1)).rejeitar(1, "Fora do prazo", solicitante);
         }
 
         @Test
-        void semJustificativa_deveRetornar400() throws Exception {
-            mockMvc.perform(patch("/api/inscricao/rejeitar/1")
-                            .session(sessaoLogada(10))
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(umaOportunidade(1))))
-                    .andExpect(status().isBadRequest());
+        void deveLancarExcecaoQuandoUsuarioNaoEstaLogado() {
+            when(session.getAttribute("IdUsuarioLogado")).thenReturn(7);
+            when(usuarioService.buscarPorId(7)).thenReturn(null);
 
-            verifyNoInteractions(inscricaoService);
-        }
+            assertThatThrownBy(() -> inscricaoController.rejeitar(1, "motivo", session))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("Solicitante não foi encontrado.");
 
-        // BUG CONHECIDO [InscricaoController.java, linha 47]:
-        // Mesmo problema de SecurityException → 500 ao invés de 403.
-        @Test
-        void usuarioNaoLogado_deveRetornar403() throws Exception {
-            when(usuarioService.buscarPorId(any())).thenReturn(null);
-
-            mockMvc.perform(patch("/api/inscricao/rejeitar/1")
-                            .session(sessaoVazia())
-                            .param("justificativa", "sem motivo")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(umaOportunidade(1))))
-                    .andExpect(status().isForbidden());
-
-            verify(inscricaoService, never()).rejeitarRemoverDiscente(any(), any(), any(), any());
+            verify(inscricaoService, never()).rejeitar(any(), any(), any());
         }
 
         @Test
-        void justificativaEmBranco_serviceDeveSerChamadoComStringVazia() throws Exception {
-            // Verifica que o controller não adiciona validação silenciosa de blank
-            Usuario   solicitante = umUsuario(10);
-            Inscricao rejeitada   = umaInscricao(1);
+        void deveLancarExcecaoQuandoSessaoNaoTemAtributo() {
+            assertThatThrownBy(() -> inscricaoController.rejeitar(1, "motivo", session))
+                    .isInstanceOf(SecurityException.class)
+                    .hasMessageContaining("É preciso estar logado para chamar esse método.");
 
-            when(usuarioService.buscarPorId(10)).thenReturn(solicitante);
-            when(inscricaoService.rejeitarRemoverDiscente(any(), eq(""), any(), any()))
-                    .thenReturn(rejeitada);
+            verify(inscricaoService, never()).rejeitar(any(), any(), any());
+        }
 
-            mockMvc.perform(patch("/api/inscricao/rejeitar/1")
-                            .session(sessaoLogada(10))
-                            .param("justificativa", "")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(umaOportunidade(1))))
-                    .andExpect(status().isOk());
+        @Test
+        void devePropagarExcecaoQuandoSolicitanteNaoEhResponsavel() {
+            Docente solicitante = docente();
+            logarComo(solicitante);
+            when(inscricaoService.rejeitar(1, "motivo", solicitante))
+                    .thenThrow(new SecurityException("Apenas o responsável pode fazer isso."));
+
+            assertThatThrownBy(() -> inscricaoController.rejeitar(1, "motivo", session))
+                    .isInstanceOf(SecurityException.class)
+                    .hasMessageContaining("Apenas o responsável");
+        }
+
+        @Test
+        void devePropagarExcecaoQuandoInscricaoNaoEstaPendente() {
+            Docente solicitante = docente();
+            logarComo(solicitante);
+            when(inscricaoService.rejeitar(1, "motivo", solicitante))
+                    .thenThrow(new IllegalStateException("Só é possível rejeitar inscrições PENDENTES."));
+
+            assertThatThrownBy(() -> inscricaoController.rejeitar(1, "motivo", session))
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("PENDENTES");
         }
     }
 
-    // ═══════════════════════════════════════════════════════════════════════
-    // PATCH /api/inscricao/desistir/{id}
-    // ═══════════════════════════════════════════════════════════════════════
+    // remover (PATCH /api/inscricao/remover/{id}) ----------------------------
 
     @Nested
-    class DesistirTest {
+    class Remover {
 
-        // BUG CONHECIDO [InscricaoController.java, linha 53+54]:
-        // @PatchMapping("/desistir/{id}") mas @PathVariable Integer inscricaoId
-        // (sem @PathVariable("id")). Mesmo problema do /aprovar/{id}.
-        // Fica VERMELHO até adicionar @PathVariable("id") ou renomear o path.
         @Test
-        void caminhoFeliz_deveRegistrarDesistenciaERetornar200() throws Exception {
-            Usuario      solicitante  = umUsuario(10);
-            Oportunidade oportunidade = umaOportunidade(5);
-            Inscricao    desistida    = umaInscricao(1);
+        void devePermitirRemocaoComJustificativa() {
+            Docente solicitante = docente();
+            logarComo(solicitante);
+            Inscricao esperada = inscricao(1);
+            when(inscricaoService.removerDiscente(1, "Descumpriu regras", solicitante)).thenReturn(esperada);
 
-            when(usuarioService.buscarPorId(10)).thenReturn(solicitante);
-            when(inscricaoService.desistir(eq(1), any(Oportunidade.class), eq(solicitante)))
-                    .thenReturn(desistida);
+            Inscricao resultado = inscricaoController.remover(1, "Descumpriu regras", session);
 
-            mockMvc.perform(patch("/api/inscricao/desistir/1")
-                            .session(sessaoLogada(10))
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(oportunidade)))
-                    .andExpect(status().isOk());
-
-            verify(inscricaoService).desistir(eq(1), any(Oportunidade.class), eq(solicitante));
-        }
-
-        // BUG CONHECIDO [InscricaoController.java, linha 57]:
-        // Mesma SecurityException → 500 em vez de 403.
-        @Test
-        void usuarioNaoLogado_deveRetornar403() throws Exception {
-            when(usuarioService.buscarPorId(any())).thenReturn(null);
-
-            mockMvc.perform(patch("/api/inscricao/desistir/1")
-                            .session(sessaoVazia())
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(umaOportunidade(1))))
-                    .andExpect(status().isForbidden());
-
-            verify(inscricaoService, never()).desistir(any(), any(), any());
+            assertThat(resultado).isEqualTo(esperada);
+            verify(inscricaoService, times(1)).removerDiscente(1, "Descumpriu regras", solicitante);
         }
 
         @Test
-        void idNegativo_deveRetornar400OuSerTratadoPeloService() throws Exception {
-            // Valor adversarial: id negativo não deve ser aceito silenciosamente
-            Usuario   solicitante = umUsuario(10);
-            Inscricao desistida   = umaInscricao(-1);
+        void deveLancarExcecaoQuandoUsuarioNaoEstaLogado() {
+            when(session.getAttribute("IdUsuarioLogado")).thenReturn(7);
+            when(usuarioService.buscarPorId(7)).thenReturn(null);
 
-            when(usuarioService.buscarPorId(10)).thenReturn(solicitante);
-            when(inscricaoService.desistir(eq(-1), any(), eq(solicitante))).thenReturn(desistida);
+            assertThatThrownBy(() -> inscricaoController.remover(1, "motivo", session))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("Solicitante não foi encontrado.");
 
-            // O controller não valida negativos — isso é documentado aqui como ponto de atenção
-            mockMvc.perform(patch("/api/inscricao/desistir/-1")
-                            .session(sessaoLogada(10))
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(umaOportunidade(1))))
-                    .andExpect(status().isOk());
+            verify(inscricaoService, never()).removerDiscente(any(), any(), any());
+        }
+
+        @Test
+        void devePropagarExcecaoQuandoInscricaoNaoEstaAprovada() {
+            Docente solicitante = docente();
+            logarComo(solicitante);
+            when(inscricaoService.removerDiscente(1, "motivo", solicitante))
+                    .thenThrow(new IllegalStateException("Só é possível retirar inscrições aprovadas."));
+
+            assertThatThrownBy(() -> inscricaoController.remover(1, "motivo", session))
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("aprovadas");
         }
     }
 
-    // ═══════════════════════════════════════════════════════════════════════
-    // GET /api/inscricao/oportunidade/{id}
-    // ═══════════════════════════════════════════════════════════════════════
+    // desistir (PATCH /api/inscricao/desistir/{id}) --------------------------
 
     @Nested
-    class ListarPorOportunidadeTest {
+    class Desistir {
 
-        // BUG CONHECIDO [InscricaoController.java, linha 64+65]:
-        // O parâmetro `Oportunidade oportunidade` não tem @PathVariable nem @RequestBody.
-        // Spring injeta um objeto Oportunidade com todos os campos null (construtor default),
-        // ignorando completamente o {id} da URL. O service recebe uma Oportunidade vazia,
-        // o que provavelmente causa NullPointerException ou retorno incorreto.
-        // Fica VERMELHO até substituir por @PathVariable Integer id e buscar a entidade.
         @Test
-        void caminhoFeliz_deveListarInscricoesDaOportunidade() throws Exception {
-            Inscricao inscricao = umaInscricao(1);
+        void devePermitirDesistenciaDoProprioDiscente() {
+            Discente solicitante = discente();
+            logarComo(solicitante);
+            Inscricao esperada = inscricao(1);
+            when(inscricaoService.desistir(1, solicitante)).thenReturn(esperada);
 
-            // Após correção o controller deve buscar a Oportunidade pelo id e repassar ao service
-            when(inscricaoService.listarPorOportunidade(any(Oportunidade.class)))
-                    .thenReturn(List.of(inscricao));
+            Inscricao resultado = inscricaoController.desistir(1, session);
 
-            mockMvc.perform(get("/api/inscricao/oportunidade/5"))
-                    .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.length()").value(1));
+            assertThat(resultado).isEqualTo(esperada);
+            verify(inscricaoService, times(1)).desistir(1, solicitante);
         }
 
         @Test
-        void listaNula_deveRetornarListaVazia() throws Exception {
-            when(inscricaoService.listarPorOportunidade(any(Oportunidade.class)))
-                    .thenReturn(Collections.emptyList());
+        void deveLancarExcecaoQuandoUsuarioNaoEstaLogado() {
+            when(session.getAttribute("IdUsuarioLogado")).thenReturn(7);
+            when(usuarioService.buscarPorId(7)).thenReturn(null);
 
-            mockMvc.perform(get("/api/inscricao/oportunidade/5"))
-                    .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.length()").value(0));
+            assertThatThrownBy(() -> inscricaoController.desistir(1, session))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("Solicitante não foi encontrado.");
+
+            verify(inscricaoService, never()).desistir(any(), any());
+        }
+
+        @Test
+        void devePropagarExcecaoQuandoSolicitanteNaoEhODiscenteDaInscricao() {
+            Discente solicitante = discente();
+            logarComo(solicitante);
+            when(inscricaoService.desistir(1, solicitante))
+                    .thenThrow(new IllegalStateException("Apenas o próprio discente pode desistir"));
+
+            assertThatThrownBy(() -> inscricaoController.desistir(1, session))
+                    .isInstanceOf(IllegalStateException.class)
+                    .hasMessageContaining("próprio discente");
         }
     }
 
-    // ═══════════════════════════════════════════════════════════════════════
-    // GET /api/inscricao/oportunidade/{id}/fila-espera
-    // ═══════════════════════════════════════════════════════════════════════
+    // listarPorOportunidade (GET /api/inscricao/lista/oportunidade/{id}) -----
 
     @Nested
-    class ListarFilaEsperaTest {
+    class ListarPorOportunidade {
 
-        // BUG CONHECIDO [InscricaoController.java, linha 69+70]:
-        // GET com @RequestBody é contra a especificação HTTP/1.1; a maioria dos
-        // proxies, clientes e servidores descarta o body em requisições GET.
-        // MockMvc o aceita, mas em produção o body raramente chegará preenchido.
-        // Fica VERMELHO (no sentido de risco em produção) até refatorar para
-        // receber @PathVariable Integer id e resolver a Oportunidade internamente.
         @Test
-        void caminhoFeliz_deveListarFilaDeEspera() throws Exception {
-            Inscricao inscricao = umaInscricao(2);
+        void deveRetornarInscricoesDaOportunidade() {
+            Inscricao i1 = inscricao(1);
+            when(inscricaoService.listarPorOportunidade(5)).thenReturn(List.of(i1));
 
-            when(inscricaoService.listarFilaEspera(any(Oportunidade.class)))
-                    .thenReturn(List.of(inscricao));
+            List<Inscricao> resultado = inscricaoController.listarPorOportunidade(5);
 
-            // Após a correção do bug, o id virá pela URL, sem body
-            mockMvc.perform(get("/api/inscricao/oportunidade/5/fila-espera"))
-                    .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.length()").value(1));
+            assertThat(resultado).containsExactly(i1);
         }
 
         @Test
-        void filaVazia_deveRetornarListaVazia() throws Exception {
-            when(inscricaoService.listarFilaEspera(any(Oportunidade.class)))
-                    .thenReturn(Collections.emptyList());
+        void deveRetornarListaVaziaQuandoNaoHaInscricoes() {
+            when(inscricaoService.listarPorOportunidade(5)).thenReturn(List.of());
 
-            mockMvc.perform(get("/api/inscricao/oportunidade/5/fila-espera"))
-                    .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.length()").value(0));
+            assertThat(inscricaoController.listarPorOportunidade(5)).isEmpty();
+        }
+
+        @Test
+        void devePropagarExcecaoQuandoOportunidadeNaoExiste() {
+            when(inscricaoService.listarPorOportunidade(999))
+                    .thenThrow(new IllegalArgumentException("Oportunidade não existe."));
+
+            assertThatThrownBy(() -> inscricaoController.listarPorOportunidade(999))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("Oportunidade não existe.");
         }
     }
 
-    // ═══════════════════════════════════════════════════════════════════════
-    // GET /api/inscricao/discente/{id}
-    // ═══════════════════════════════════════════════════════════════════════
+    // listarFilaEspera (GET /api/inscricao/lista/fila-espera/{id}) ----------
 
     @Nested
-    class ListarPorDiscenteTest {
+    class ListarFilaEspera {
 
-        // BUG CONHECIDO [InscricaoController.java, linha 74+75]:
-        // Mesmo problema de GET com @RequestBody que listarFilaEspera.
-        // Fica VERMELHO até refatorar para @PathVariable Integer id.
         @Test
-        void caminhoFeliz_deveListarInscricoesDoDiscente() throws Exception {
-            Inscricao inscricao = umaInscricao(3);
+        void deveRetornarFilaDeEspera() {
+            Inscricao i1 = inscricao(2);
+            when(inscricaoService.listarFilaEspera(5)).thenReturn(List.of(i1));
 
-            when(inscricaoService.listarPorDiscente(any(Discente.class)))
-                    .thenReturn(List.of(inscricao));
-
-            mockMvc.perform(get("/api/inscricao/discente/7"))
-                    .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.length()").value(1));
+            assertThat(inscricaoController.listarFilaEspera(5)).containsExactly(i1);
         }
 
         @Test
-        void discenteSemInscricoes_deveRetornarListaVazia() throws Exception {
-            when(inscricaoService.listarPorDiscente(any(Discente.class)))
-                    .thenReturn(Collections.emptyList());
+        void deveRetornarListaVaziaQuandoFilaVazia() {
+            when(inscricaoService.listarFilaEspera(5)).thenReturn(List.of());
 
-            mockMvc.perform(get("/api/inscricao/discente/7"))
-                    .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.length()").value(0));
+            assertThat(inscricaoController.listarFilaEspera(5)).isEmpty();
         }
     }
-}package br.ufma.springextensao.controller;
 
-import br.ufma.extensao.servicos.InscricaoService;
-import br.ufma.springextensao.controller.dtos.InscricaoDTO;
-import br.ufma.springextensao.model.Discente;
-import br.ufma.springextensao.model.Inscricao;
-import br.ufma.springextensao.model.Oportunidade;
-import br.ufma.springextensao.model.Usuario;
-import br.ufma.springextensao.service.UsuarioService;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Nested;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.mockito.junit.jupiter.MockitoSettings;
-import org.mockito.quality.Strictness;
-import org.springframework.http.MediaType;
-import org.springframework.mock.web.MockHttpSession;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
-
-import java.util.Collections;
-import java.util.List;
-
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.*;
-        import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-        import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
-
-/**
- * Testes unitários de InscricaoController.
- *
- * Estratégia: MockMvc standalone (sem contexto Spring).
- * O InscricaoService e o UsuarioService são mocks puros — nenhum banco é acessado.
- *
- * Testes marcados com "BUG CONHECIDO" ficam VERMELHOS até a correção correspondente
- * ser aplicada no código de produção.
- */
-@ExtendWith(MockitoExtension.class)
-@MockitoSettings(strictness = Strictness.LENIENT)
-class InscricaoControllerTest {
-
-    // ═══════════════════════════════════════════════════════════════════════
-    // Dependências mockadas
-    // ═══════════════════════════════════════════════════════════════════════
-
-    @Mock
-    private InscricaoService inscricaoService;
-
-    @Mock
-    private UsuarioService usuarioService;
-
-    @InjectMocks
-    private InscricaoController controller;
-
-    private MockMvc mockMvc;
-    private ObjectMapper mapper;
-
-    // ═══════════════════════════════════════════════════════════════════════
-    // Setup
-    // ═══════════════════════════════════════════════════════════════════════
-
-    @BeforeEach
-    void setUp() {
-        mockMvc = MockMvcBuilders.standaloneSetup(controller).build();
-        mapper  = new ObjectMapper().registerModule(new JavaTimeModule());
-    }
-
-    // ═══════════════════════════════════════════════════════════════════════
-    // Helpers — construtores de entidades de teste
-    // ═══════════════════════════════════════════════════════════════════════
-
-    private Usuario umUsuario(Integer id) {
-        Usuario u = new Usuario();
-        u.setId(id);
-        return u;
-    }
-
-    private Oportunidade umaOportunidade(Integer id) {
-        Oportunidade o = new Oportunidade();
-        o.setId(id);
-        return o;
-    }
-
-    private Inscricao umaInscricao(Integer id) {
-        Inscricao i = new Inscricao();
-        i.setId(id);
-        return i;
-    }
-
-    private Discente umDiscente(Integer id) {
-        Discente d = new Discente();
-        d.setId(id);
-        return d;
-    }
-
-    private InscricaoDTO umaInscricaoDTO(Integer oportunidadeId) {
-        InscricaoDTO dto = new InscricaoDTO();
-        // ajuste os setters conforme os campos reais de InscricaoDTO
-        dto.setOportunidadeId(oportunidadeId);
-        return dto;
-    }
-
-    /** Sessão com o atributo CORRETO de usuário logado. */
-    private MockHttpSession sessaoLogada(Integer usuarioId) {
-        MockHttpSession s = new MockHttpSession();
-        s.setAttribute("IdUsuarioLogado", usuarioId);
-        return s;
-    }
-
-    /** Sessão sem nenhum atributo (usuário não autenticado). */
-    private MockHttpSession sessaoVazia() {
-        return new MockHttpSession();
-    }
-
-    // ═══════════════════════════════════════════════════════════════════════
-    // POST /api/inscricao/inscrever
-    // ═══════════════════════════════════════════════════════════════════════
+    // listarPorDiscente (GET /api/inscricao/lista/discente/{id}) ------------
 
     @Nested
-    class InscreverTest {
+    class ListarPorDiscente {
 
         @Test
-        void caminhoFeliz_deveInscreverERetornar201() throws Exception {
-            InscricaoDTO dto      = umaInscricaoDTO(5);
-            Inscricao    salva    = umaInscricao(1);
+        void deveRetornarInscricoesDoDiscente() {
+            Inscricao i1 = inscricao(3);
+            when(inscricaoService.listarPorDiscente(7)).thenReturn(List.of(i1));
 
-            when(inscricaoService.inscrever(any(InscricaoDTO.class))).thenReturn(salva);
-
-            mockMvc.perform(post("/api/inscricao/inscrever")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(dto)))
-                    .andExpect(status().isCreated());
-
-            verify(inscricaoService, times(1)).inscrever(any(InscricaoDTO.class));
+            assertThat(inscricaoController.listarPorDiscente(7)).containsExactly(i1);
         }
 
         @Test
-        void deveRepassarDTOIntactoAoService() throws Exception {
-            InscricaoDTO dto   = umaInscricaoDTO(7);
-            Inscricao    salva = umaInscricao(2);
+        void deveRetornarListaVaziaQuandoDiscenteSemInscricoes() {
+            when(inscricaoService.listarPorDiscente(7)).thenReturn(List.of());
 
-            when(inscricaoService.inscrever(any(InscricaoDTO.class))).thenReturn(salva);
-
-            mockMvc.perform(post("/api/inscricao/inscrever")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(dto)))
-                    .andExpect(status().isCreated());
-
-            // garante que o service foi chamado com um DTO (não null)
-            verify(inscricaoService).inscrever(any(InscricaoDTO.class));
+            assertThat(inscricaoController.listarPorDiscente(7)).isEmpty();
         }
 
         @Test
-        void semCorpo_deveRetornar400() throws Exception {
-            mockMvc.perform(post("/api/inscricao/inscrever")
-                            .contentType(MediaType.APPLICATION_JSON))
-                    .andExpect(status().isBadRequest());
+        void devePropagarExcecaoQuandoUsuarioNaoEhDiscente() {
+            when(inscricaoService.listarPorDiscente(1))
+                    .thenThrow(new IllegalArgumentException("Usuário precisa ser discente."));
 
-            verifyNoInteractions(inscricaoService);
-        }
-    }
-
-    // ═══════════════════════════════════════════════════════════════════════
-    // PATCH /api/inscricao/aprovar/{id}
-    // ═══════════════════════════════════════════════════════════════════════
-
-    @Nested
-    class AprovarTest {
-
-        // BUG CONHECIDO [InscricaoController.java, linha 32+34]:
-        // @PatchMapping("/aprovar/{id}") declara a variável de path como {id},
-        // mas o parâmetro do método usa @PathVariable Integer inscricaoId (sem @PathVariable("id")).
-        // Spring não consegue fazer o binding e lança IllegalArgumentException → 500.
-        // Fica VERMELHO até adicionar @PathVariable("id") ou renomear o path para {inscricaoId}.
-        @Test
-        void caminhoFeliz_deveAprovarInscricaoERetornar200() throws Exception {
-            Usuario      solicitante  = umUsuario(10);
-            Oportunidade oportunidade = umaOportunidade(5);
-            Inscricao    aprovada     = umaInscricao(1);
-
-            when(usuarioService.buscarPorId(10)).thenReturn(solicitante);
-            when(inscricaoService.aprovar(eq(1), any(Oportunidade.class), eq(solicitante)))
-                    .thenReturn(aprovada);
-
-            mockMvc.perform(patch("/api/inscricao/aprovar/1")
-                            .session(sessaoLogada(10))
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(oportunidade)))
-                    .andExpect(status().isOk());
-
-            verify(inscricaoService).aprovar(eq(1), any(Oportunidade.class), eq(solicitante));
-        }
-
-        // BUG CONHECIDO [InscricaoController.java, linha 35]:
-        // O atributo de sessão lido é "IsUsuaeioLogado" (typo com "ae") em vez de
-        // "IdUsuarioLogado". Com a sessão correta configurada aqui, o controller
-        // não encontra o atributo, retorna null e lança SecurityException → 500.
-        // Fica VERMELHO até corrigir o nome do atributo no controller.
-        @Test
-        void caminhoFeliz_sessaoCorreta_deveEncontrarUsuarioSemErroDeAtributo() throws Exception {
-            Usuario      solicitante  = umUsuario(10);
-            Oportunidade oportunidade = umaOportunidade(5);
-            Inscricao    aprovada     = umaInscricao(1);
-
-            // Sessão com o atributo no formato CORRETO
-            MockHttpSession sessao = sessaoLogada(10);
-
-            when(usuarioService.buscarPorId(10)).thenReturn(solicitante);
-            when(inscricaoService.aprovar(any(), any(), any())).thenReturn(aprovada);
-
-            // Espera 200 — vai falhar enquanto o controller ler "IsUsuaeioLogado"
-            mockMvc.perform(patch("/api/inscricao/aprovar/1")
-                            .session(sessao)
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(oportunidade)))
-                    .andExpect(status().isOk());
-        }
-
-        // BUG CONHECIDO [InscricaoController.java, linha 37]:
-        // O controller lança SecurityException (unchecked), que o DispatcherServlet
-        // converte em HTTP 500. O comportamento correto para "não autenticado" é 403.
-        // Fica VERMELHO até mapear SecurityException para 403 em um @ExceptionHandler.
-        @Test
-        void usuarioNaoLogado_deveRetornar403() throws Exception {
-            when(usuarioService.buscarPorId(any())).thenReturn(null);
-
-            mockMvc.perform(patch("/api/inscricao/aprovar/1")
-                            .session(sessaoVazia())
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(umaOportunidade(1))))
-                    .andExpect(status().isForbidden()); // 403, não 500
-
-            verify(inscricaoService, never()).aprovar(any(), any(), any());
-        }
-    }
-
-    // ═══════════════════════════════════════════════════════════════════════
-    // PATCH /api/inscricao/rejeitar
-    // ═══════════════════════════════════════════════════════════════════════
-
-    @Nested
-    class RejeitarTest {
-
-        // BUG CONHECIDO [InscricaoController.java, linha 42+44]:
-        // @PatchMapping("/rejeitar") não possui nenhuma variável de path,
-        // mas o método declara @PathVariable Integer inscricaoId.
-        // Spring lança MissingPathVariableException → 500.
-        // Fica VERMELHO até corrigir o mapping para "/rejeitar/{inscricaoId}".
-        @Test
-        void caminhoFeliz_deveRejeitarERetornar200() throws Exception {
-            Usuario      solicitante  = umUsuario(10);
-            Oportunidade oportunidade = umaOportunidade(5);
-            Inscricao    rejeitada    = umaInscricao(1);
-
-            when(usuarioService.buscarPorId(10)).thenReturn(solicitante);
-            when(inscricaoService.rejeitarRemoverDiscente(
-                    eq(1), eq("motivo invalido"), any(Oportunidade.class), eq(solicitante)))
-                    .thenReturn(rejeitada);
-
-            mockMvc.perform(patch("/api/inscricao/rejeitar/1")   // path correto após correção
-                            .session(sessaoLogada(10))
-                            .param("justificativa", "motivo invalido")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(oportunidade)))
-                    .andExpect(status().isOk());
-
-            verify(inscricaoService).rejeitarRemoverDiscente(
-                    eq(1), eq("motivo invalido"), any(Oportunidade.class), eq(solicitante));
-        }
-
-        @Test
-        void semJustificativa_deveRetornar400() throws Exception {
-            mockMvc.perform(patch("/api/inscricao/rejeitar/1")
-                            .session(sessaoLogada(10))
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(umaOportunidade(1))))
-                    .andExpect(status().isBadRequest());
-
-            verifyNoInteractions(inscricaoService);
-        }
-
-        // BUG CONHECIDO [InscricaoController.java, linha 47]:
-        // Mesmo problema de SecurityException → 500 ao invés de 403.
-        @Test
-        void usuarioNaoLogado_deveRetornar403() throws Exception {
-            when(usuarioService.buscarPorId(any())).thenReturn(null);
-
-            mockMvc.perform(patch("/api/inscricao/rejeitar/1")
-                            .session(sessaoVazia())
-                            .param("justificativa", "sem motivo")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(umaOportunidade(1))))
-                    .andExpect(status().isForbidden());
-
-            verify(inscricaoService, never()).rejeitarRemoverDiscente(any(), any(), any(), any());
-        }
-
-        @Test
-        void justificativaEmBranco_serviceDeveSerChamadoComStringVazia() throws Exception {
-            // Verifica que o controller não adiciona validação silenciosa de blank
-            Usuario   solicitante = umUsuario(10);
-            Inscricao rejeitada   = umaInscricao(1);
-
-            when(usuarioService.buscarPorId(10)).thenReturn(solicitante);
-            when(inscricaoService.rejeitarRemoverDiscente(any(), eq(""), any(), any()))
-                    .thenReturn(rejeitada);
-
-            mockMvc.perform(patch("/api/inscricao/rejeitar/1")
-                            .session(sessaoLogada(10))
-                            .param("justificativa", "")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(umaOportunidade(1))))
-                    .andExpect(status().isOk());
-        }
-    }
-
-    // ═══════════════════════════════════════════════════════════════════════
-    // PATCH /api/inscricao/desistir/{id}
-    // ═══════════════════════════════════════════════════════════════════════
-
-    @Nested
-    class DesistirTest {
-
-        // BUG CONHECIDO [InscricaoController.java, linha 53+54]:
-        // @PatchMapping("/desistir/{id}") mas @PathVariable Integer inscricaoId
-        // (sem @PathVariable("id")). Mesmo problema do /aprovar/{id}.
-        // Fica VERMELHO até adicionar @PathVariable("id") ou renomear o path.
-        @Test
-        void caminhoFeliz_deveRegistrarDesistenciaERetornar200() throws Exception {
-            Usuario      solicitante  = umUsuario(10);
-            Oportunidade oportunidade = umaOportunidade(5);
-            Inscricao    desistida    = umaInscricao(1);
-
-            when(usuarioService.buscarPorId(10)).thenReturn(solicitante);
-            when(inscricaoService.desistir(eq(1), any(Oportunidade.class), eq(solicitante)))
-                    .thenReturn(desistida);
-
-            mockMvc.perform(patch("/api/inscricao/desistir/1")
-                            .session(sessaoLogada(10))
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(oportunidade)))
-                    .andExpect(status().isOk());
-
-            verify(inscricaoService).desistir(eq(1), any(Oportunidade.class), eq(solicitante));
-        }
-
-        // BUG CONHECIDO [InscricaoController.java, linha 57]:
-        // Mesma SecurityException → 500 em vez de 403.
-        @Test
-        void usuarioNaoLogado_deveRetornar403() throws Exception {
-            when(usuarioService.buscarPorId(any())).thenReturn(null);
-
-            mockMvc.perform(patch("/api/inscricao/desistir/1")
-                            .session(sessaoVazia())
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(umaOportunidade(1))))
-                    .andExpect(status().isForbidden());
-
-            verify(inscricaoService, never()).desistir(any(), any(), any());
-        }
-
-        @Test
-        void idNegativo_deveRetornar400OuSerTratadoPeloService() throws Exception {
-            // Valor adversarial: id negativo não deve ser aceito silenciosamente
-            Usuario   solicitante = umUsuario(10);
-            Inscricao desistida   = umaInscricao(-1);
-
-            when(usuarioService.buscarPorId(10)).thenReturn(solicitante);
-            when(inscricaoService.desistir(eq(-1), any(), eq(solicitante))).thenReturn(desistida);
-
-            // O controller não valida negativos — isso é documentado aqui como ponto de atenção
-            mockMvc.perform(patch("/api/inscricao/desistir/-1")
-                            .session(sessaoLogada(10))
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(mapper.writeValueAsString(umaOportunidade(1))))
-                    .andExpect(status().isOk());
-        }
-    }
-
-    // ═══════════════════════════════════════════════════════════════════════
-    // GET /api/inscricao/oportunidade/{id}
-    // ═══════════════════════════════════════════════════════════════════════
-
-    @Nested
-    class ListarPorOportunidadeTest {
-
-        // BUG CONHECIDO [InscricaoController.java, linha 64+65]:
-        // O parâmetro `Oportunidade oportunidade` não tem @PathVariable nem @RequestBody.
-        // Spring injeta um objeto Oportunidade com todos os campos null (construtor default),
-        // ignorando completamente o {id} da URL. O service recebe uma Oportunidade vazia,
-        // o que provavelmente causa NullPointerException ou retorno incorreto.
-        // Fica VERMELHO até substituir por @PathVariable Integer id e buscar a entidade.
-        @Test
-        void caminhoFeliz_deveListarInscricoesDaOportunidade() throws Exception {
-            Inscricao inscricao = umaInscricao(1);
-
-            // Após correção o controller deve buscar a Oportunidade pelo id e repassar ao service
-            when(inscricaoService.listarPorOportunidade(any(Oportunidade.class)))
-                    .thenReturn(List.of(inscricao));
-
-            mockMvc.perform(get("/api/inscricao/oportunidade/5"))
-                    .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.length()").value(1));
-        }
-
-        @Test
-        void listaNula_deveRetornarListaVazia() throws Exception {
-            when(inscricaoService.listarPorOportunidade(any(Oportunidade.class)))
-                    .thenReturn(Collections.emptyList());
-
-            mockMvc.perform(get("/api/inscricao/oportunidade/5"))
-                    .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.length()").value(0));
-        }
-    }
-
-    // ═══════════════════════════════════════════════════════════════════════
-    // GET /api/inscricao/oportunidade/{id}/fila-espera
-    // ═══════════════════════════════════════════════════════════════════════
-
-    @Nested
-    class ListarFilaEsperaTest {
-
-        // BUG CONHECIDO [InscricaoController.java, linha 69+70]:
-        // GET com @RequestBody é contra a especificação HTTP/1.1; a maioria dos
-        // proxies, clientes e servidores descarta o body em requisições GET.
-        // MockMvc o aceita, mas em produção o body raramente chegará preenchido.
-        // Fica VERMELHO (no sentido de risco em produção) até refatorar para
-        // receber @PathVariable Integer id e resolver a Oportunidade internamente.
-        @Test
-        void caminhoFeliz_deveListarFilaDeEspera() throws Exception {
-            Inscricao inscricao = umaInscricao(2);
-
-            when(inscricaoService.listarFilaEspera(any(Oportunidade.class)))
-                    .thenReturn(List.of(inscricao));
-
-            // Após a correção do bug, o id virá pela URL, sem body
-            mockMvc.perform(get("/api/inscricao/oportunidade/5/fila-espera"))
-                    .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.length()").value(1));
-        }
-
-        @Test
-        void filaVazia_deveRetornarListaVazia() throws Exception {
-            when(inscricaoService.listarFilaEspera(any(Oportunidade.class)))
-                    .thenReturn(Collections.emptyList());
-
-            mockMvc.perform(get("/api/inscricao/oportunidade/5/fila-espera"))
-                    .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.length()").value(0));
-        }
-    }
-
-    // ═══════════════════════════════════════════════════════════════════════
-    // GET /api/inscricao/discente/{id}
-    // ═══════════════════════════════════════════════════════════════════════
-
-    @Nested
-    class ListarPorDiscenteTest {
-
-        // BUG CONHECIDO [InscricaoController.java, linha 74+75]:
-        // Mesmo problema de GET com @RequestBody que listarFilaEspera.
-        // Fica VERMELHO até refatorar para @PathVariable Integer id.
-        @Test
-        void caminhoFeliz_deveListarInscricoesDoDiscente() throws Exception {
-            Inscricao inscricao = umaInscricao(3);
-
-            when(inscricaoService.listarPorDiscente(any(Discente.class)))
-                    .thenReturn(List.of(inscricao));
-
-            mockMvc.perform(get("/api/inscricao/discente/7"))
-                    .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.length()").value(1));
-        }
-
-        @Test
-        void discenteSemInscricoes_deveRetornarListaVazia() throws Exception {
-            when(inscricaoService.listarPorDiscente(any(Discente.class)))
-                    .thenReturn(Collections.emptyList());
-
-            mockMvc.perform(get("/api/inscricao/discente/7"))
-                    .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.length()").value(0));
+            assertThatThrownBy(() -> inscricaoController.listarPorDiscente(1))
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining("precisa ser discente");
         }
     }
 }
